--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,10 @@ multiple-box-images.html
 notes.txt
 rootconfig.php
 config.php
+/admin/upload_file2.php
+/styles/nav.png
+nav.png
+/styles/style2.css
+style.css
+/admin/deleteimages.php
+
